# prompt_manager

./: .gitignore  CONVERTER_GUIDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
prompt_manager/: __init__.py  prompt_base.py  prompt_converter.py  prompt_generator_light.py  prompt_util.py  prompt_visualization.py
prompt_manager/visualizer/: __init__.py  handler.py  prompt_visualization.py  server.py  service.py  ui.py
prompt_manager/visualizer/static/: app.js  styles.css
prompt_manager/visualizer/templates/: index.html
tests/: run_tests.py  test_chat_completion_prompts.py  test_dynamic_jinja2_rendering.py  test_prompt_converter.py  test_prompt_loader.py  test_prompt_populate.py  test_prompt_version_check.py  test_prompt_visualization.py
tests/test_prompt/chat/v1/: test_prompt.jinja2  test_prompt.json  test_prompt.txt
tests/test_prompt/completion/v1/: test_prompt.jinja2
tests/test_prompt/dynamic_for/v1/: evaluate_categories.jinja2
tests/test_prompt/dynamic_if/v1/: evaluate_conditional.jinja2
tests/test_prompt/prompt_with_known_placeholders/v1/: test_prompt.jinja2  test_prompt.json  test_prompt.txt
tests/test_prompt/version_test/v2.0.1/: test_prompt.txt
